// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> accepts a fill bool 1`] = `
.c0 {
  background: var(--color-gray);
  border: 1px solid var(--color-gray-dark);
  border-radius: 0;
  display: block;
  padding: var(--size-smaller);
  width: 100%;
}

<button
  className="c0"
  fill={true}
/>
`;

exports[`<Button /> renders correctly 1`] = `
.c0 {
  background: var(--color-gray);
  border: 1px solid var(--color-gray-dark);
  border-radius: 0;
  display: unset;
  padding: var(--size-smaller);
  width: unset;
}

<button
  className="c0"
  fill={false}
/>
`;
